2000-06-08  Tanaka Akira  <akr@zsh.org>

	* users/3130: Completion/Debian/_apt: fix actions for _alternative.

2000-06-07  Sven Wischnowsky  <wischnow@zsh.org>

	* 11796: Src/Zle/compmatch.c: try to get the tests for `strings
 	long enough' right in anchor matching code
	
2000-06-07  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11711: Andrej Borsenkow: Test/ztst.zsh: Ignore diff output
	unless the test failed, to work around some diffs which produce
	success messages.

2000-06-07  Sven Wischnowsky  <wischnow@zsh.org>

	* user/3124: Completion/Core/_normal, Src/Zle/compctl.c: optimise
 	command lookup in old and new completion
	
	* 11794: Src/Zle/compcore.c, Src/Zle/complist.c, Src/Zle/zle_tricky.c:
 	hopefully more consistent beeping with menu-selection
	
	* 11792: Doc/Zsh/mod_zutil.yo, Src/Modules/zutil.c: -K option for
 	zparseopts to keep previous array values
	
	* 11789: Completion/Commands/_correct_word,
 	Completion/Commands/_expand_word, Completion/Commands/_next_tags:
 	setup options in bindable commands
	
2000-06-06  Oliver Kiddle  <opk@zsh.org>

	* 11772: Completion/User/_urls: improvements to 11756 suggested by
	Bart in 11763 

2000-06-06  Sven Wischnowsky  <wischnow@zsh.org>

	* 11777: Completion/Core/_expand: make _expand ignore empty
 	expansions
	
	* 11776: Completion/Core/_path_files: fix for _path_files and
 	globcomplete, better test if word contains wildcards
	
	* 11768: Doc/Zsh/expn.yo, Src/lex.c, Src/subst.c: make (e) flag be
 	silent unless (X) is given, too
	
2000-06-05  Oliver Kiddle  <opk@zsh.org>

	* 11756: Completion/User/_urls, Completion/Linux/_rpm: accept -g
	option in _urls and use _urls in _rpm

	* 11755: test/comptest: fix wording in error messages

2000-06-05  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* Config/version.mk: 3.1.9, already.

2000-06-05  Oliver Kiddle  <opk@zsh.org>

	* unposted: Src/params.c: AIX dependency fix

2000-06-05  Peter Stephenson  <pws@cambridgesiliconradio.com>
