@@ -1,3 +1,8 @@
+2000-06-08  Sven Wischnowsky  <wischnow@zsh.org>
+
+	* 11814: Src/Zle/zle_tricky.c: make C-code expansion add a space
+ 	only when more than one word was generated
+	
 2000-06-08  Tanaka Akira  <akr@zsh.org>
 
 	* users/3130: Completion/Debian/_apt: fix actions for _alternative.
